@@ -383,7 +383,7 @@
  *
  * Taskbar overlay icon is based on
  * <a href="http://p.yusukekamiyamane.com/">Fugue</a> icon set.
- * Light bulb, star; large repeat, stop, terminal, script and help icons were copied from this set too.
+ * Light bulb, star, pause; large repeat, stop, terminal, script and help icons were copied from this set too.
  *
  * <ul>
  * <li> Portions Copyright &copy; 2012 Yusuke Kamiyamane
